# motion

./: README.md
.github/workflows/: workflow.yml
elec_skin/: CMakeLists.txt  package.xml
elec_skin/include/elec_skin/: elec_skin.hpp  elec_skin_base.hpp
elec_skin/src/: main.cpp
elec_skin/toml_config/: elec_skin.toml
motion_action/: CMakeLists.txt  package.xml
motion_action/include/motion_action/: motion_action.hpp  motion_macros.hpp
motion_action/launch/: test_as_manager.launch  test_as_manager.py
motion_action/preset/: 0.toml  1.toml  10.toml  1000.toml  1001.toml  1002.toml  1003.toml  1004.toml  1005.toml  1006.toml  1007.toml  102.toml  11.toml  111.toml  12.toml  121.toml  122.toml  123.toml  124.toml  125.toml  126.toml  129.toml  13.toml  130.toml  131.toml  132.toml  133.toml  134.toml  135.toml  136.toml  137.toml  138.toml  14.toml  15.toml  152.toml  16.toml  17.toml  18.toml  2.toml  201.toml  (+19 more)
motion_action/scripts/: motion_demo.py  motion_pitch.py  motion_roll.py  motion_teleop.py  motion_units.py  motion_yaw.py  pose_teleop.py  statistics.py
motion_action/src/: motion_action.cpp
motion_action/test/: client_test.cpp  controller_test.cpp  manager_test.cpp  publisher_test.cpp  test_as_client.cpp  test_as_controller.cpp  test_as_manager.cpp  test_as_publisher.cpp
motion_bridge/: CMakeLists.txt  package.xml
motion_bridge/include/lcm/: heightmap_t.hpp  localization_lcmt.hpp
motion_bridge/include/motion_bridge/: elevation_bridge.hpp  file_bridge.hpp  imu_bridge.hpp  leg_odom_publisher.hpp  motor_bridge.hpp  odom_out_publisher.hpp
motion_bridge/lcm/: heightmap_t.lcm  localization_lcmt.lcm
motion_bridge/src/: elevation_bridge.cpp  file_bridge.cpp  imu_bridge.cpp  leg_odom_publisher.cpp  main.cpp  motor_bridge.cpp  odom_out_publisher.cpp
motion_bridge/test/: as_controller.cpp  as_controller_file.cpp
motion_follow/: CMakeLists.txt  package.xml
motion_follow/include/motion_follow/: command.hpp  lidar_utils.hpp
motion_follow/src/: follow_test.cpp
motion_manager/: CMakeLists.txt  package.xml
motion_manager/config/: priority.toml
motion_manager/include/motion_manager/: motion_decision.hpp  motion_handler.hpp  motion_macros.hpp  motion_manager.hpp
motion_manager/src/: main.cpp  motion_decision.cpp  motion_handler.cpp  motion_manager.cpp
motion_manager/test/: gait_factory.toml
motion_utils/: CMakeLists.txt  package.xml
motion_utils/config/: edge_align.toml  stair_align.toml
motion_utils/include/motion_utils/: edge_align.hpp  edge_perception.hpp  motion_utils.hpp  search_stair.hpp  stair_align.hpp  stair_perception.hpp
motion_utils/launch/: stair_align_launch.py  tof_node_launch.py
motion_utils/motion_utils/: __init__.py
motion_utils/scripts/: head_tof_pcl_publisher.py  robot_control_response_lcmt.py  servo_delay_statistics.py  tof_lcmt.py
motion_utils/src/: motion_utils.cpp
motion_utils/test/: distance_test.cpp  duration_test.cpp  edge_align.cpp  edge_perception.cpp  edge_perception_test.cpp  stair_align.cpp  stair_perception.cpp  stair_perception_test.cpp  stair_search.cpp
navigation2/nav2_bringup/nav2_gazebo_spawner/: setup.cfg
navigation2/nav2_rviz_plugins/src/: nav2_panel.cpp
navigation_core/cyberdog_gridmap_costmap_plugin/: gridmap_cost_layer.xml  package.xml
navigation_core/cyberdog_gridmap_costmap_plugin/include/cyberdog_gridmap_costmap_plugin/: gridmap_cotmap_plugin.hpp
navigation_core/cyberdog_gridmap_costmap_plugin/src/: gridmap_cotmap_plugin.cpp
navigation_core/navigation_bringup/: package.xml
navigation_core/navigation_bringup/launch/: navigation.launch.py
navigation_core/navigation_interfaces/: package.xml
navigation_core/navigation_interfaces/src/: motion_core_node.cpp
skin_manager/: CMakeLists.txt  package.xml
skin_manager/config/: elec_skin.toml
skin_manager/include/: skin_manager.hpp
skin_manager/include/skin_manager/: skin_manager.hpp
skin_manager/src/: skin_manager.cpp
