<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elec_skin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liukai21@xiaomi.com">liukai21</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>toml</depend>
  <depend>ament_index_cpp</depend>
  <depend>cyberdog_common</depend>
  <depend>cyberdog_embed_protocol</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
