<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_follow</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dukun1@xiaomi.com">dukun</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>cyberdog_system</depend>
  <depend>cyberdog_common</depend>
  <depend>cyberdog_debug</depend>
  <depend>manager_base</depend>
  <depend>motion_action</depend>
  <depend>protocol</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
